Fixed page overflow problem

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -10,6 +10,10 @@ html, body {
     background-color: #202C39;
 }
 
+.row {
+    margin: 0;
+}
+
 div.generic-container {
     width: 100%;
     text-align: center;
